<resources>
    <string name="app_name">MyCar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_name">Vehicle name</string>
    <string name="car_brand">Brand</string>
    <string name="car_model">Model</string>
    <string name="registration_number">Registration number</string>
    <string name="vin_number">VIN number</string>
    <string name="fuel_capacity">Fuel Capacity</string>
    <string name="notes">Notes</string>
    <string name="title_activity_new_vehicle">New Vehicle</string>
    <string name="action_save">Save</string>
    <string name="title_activity_new_service">New Service</string>
    <string name="title_activity_new_expense">New Expense</string>
    <string name="title_activity_new_reminder">New Reminder</string>
    <string name="title_activity_new_refueling">New Refueling</string>
    <string name="title_activity_new_insurance">New Insurance</string>
    <string name="odometer">Odometer</string>
    <string name="horse_power">Horse power</string>
    <string name="cubic_centimeters">Cubic centimeters</string>
    <string name="manifacture_date">Manifacture date</string>
    <string name="color">Color</string>
    <string name="one_fuel_tank">One fuel tank</string>
    <string name="two_fuel_tanks">Two fuel tanks</string>
    <string name="capacity">Capacity</string>
    <string name="consumption">Consumption</string>
    <string name="registration_plate">Registration plate</string>
    <string name="vin_plate">VIN plate</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="company_name">Company name</string>
    <string name="expiration_date">Expiration date</string>
    <string name="notification_date">Notification date</string>
    <string name="gas_station_name">Gas station name</string>
    <string name="total_cost">Total cost</string>
    <string name="add_fuel_tank">+ Add fuel tank</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="next">NEXT</string>
    <string name="got_it">GOT IT!</string>
    <string name="title_slide_1">Welcome to MyCar!</string>
    <string name="text_slide_1">Manage your car effortlessly</string>
    <string name="title_slide_2">Car records</string>
    <string name="text_slide_2">Save your car activities instantly and retrieve them later&#8230;</string>
    <string name="title_slide_3">Car statistics</string>
    <string name="text_slide_3">See your car stats!</string>
    <string name="new_fuel_tank">New fuel tank</string>
    <string name="fuel_tank">Fuel Tank</string>

    <string-array name="vehicle_types">
        <item>Car</item>
        <item>Bus</item>
        <item>Motorcycle</item>
        <item>Truck</item>
    </string-array>

    <string-array name="fuel_types">
        <item>Liquid</item>
        <item>Electric</item>
        <item>LNG</item>
        <item>CNG</item>
    </string-array>

    <string-array name="vehicle_info">
        <item>@string/car_brand</item>
        <item>@string/car_model</item>
        <item>@string/odometer</item>
        <item>@string/horse_power</item>
        <item>@string/cubic_centimeters</item>
        <item>@string/manifacture_date</item>
        <item>@string/registration_plate</item>
        <item>@string/vin_plate</item>
        <item>@string/notes</item>
    </string-array>

    <string name="fuel_tank_placeholder"><b>Fuel tank %d</b></string>
    <string name="fuel_type_placeholder">Fuel Type: %s</string>
    <string name="capacity_placeholder">Capacity: %d</string>
    <string name="consumption_placeholder">Consumption: %.1f</string>
    <string name="title_activity_view_vehicle">ViewVehicleActivity</string>
    <string name="change_placeholder">Change %s</string>
    <string name="last_odometer_placeholder">Last odometer: %d</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="set">Set</string>
    <string name="time">Time</string>
    <string name="service_type">Service type</string>
    <string name="expense_type">Expense type</string>
    <string name="full_fuel_tank">Full fuel tank</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quantity">Quantity</string>
    <string name="select_color">Select color:</string>
</resources>