<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_new_service"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="stoyanov.valentin.mycar.activities.NewServiceActivity"
    tools:showIn="@layout/activity_new_service">

    <EditText
        android:id="@+id/et_new_service_date"
        android:focusable="false"
        android:cursorVisible="false"
        android:hint="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_new_service_odometer"
        android:hint="@string/odometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--
   maybe listview
   -->

    <EditText
        android:id="@+id/et_new_expense_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"/>
</LinearLayout>
