<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_add_edit"
        android:layout_marginTop="8dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_add_edit_date"
            android:drawableTop="@drawable/ic_calendar_black_24dp"
            android:text="@string/date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_add_edit_time"
            android:drawableTop="@drawable/ic_alarm_black_24dp"
            android:text="@string/time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/til_add_edit_odometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:inputType="number"
            android:drawableLeft="@drawable/ic_odometer"
            android:drawablePadding="16dp"
            android:maxLines="1"
            android:maxLength="16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/odometer"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_add_edit_current_odometer"
        android:layout_gravity="center_horizontal"
        android:text="asd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_add_edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:drawableLeft="@drawable/ic_monetization_black_24px"
            android:drawablePadding="16dp"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/til_add_edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:drawableLeft="@drawable/ic_note_black_24px"
            android:inputType="textMultiLine"
            android:drawablePadding="16dp"
            android:maxLines="16"
            android:maxLength="256"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>