<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="stoyanov.valentin.mycar.activities.ViewVehicleActivity"
    tools:showIn="@layout/activity_view_vehicle"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:layout_width="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="center_horizontal"
                android:text="@string/car_brand"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="center_horizontal"
                android:text="@string/car_model"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_view_vehicle_brand"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_view_vehicle_model"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="center_horizontal"
            android:text="@string/odometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_view_vehicle_odometer"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="center_horizontal"
            android:text="@string/manufacture_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_view_vehicle_manufacture_date"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="center_horizontal"
                android:text="@string/horse_power"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="center_horizontal"
                android:text="@string/cubic_centimeters"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_view_vehicle_horse_power"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_view_vehicle_cubic_centimeters"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="center_horizontal"
            android:text="@string/registration_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_view_vehicle_registration_plate"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="center_horizontal"
            android:text="@string/vin_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_view_vehicle_vin_plate"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/ll_view_vehicle_fuel_tanks"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="center_horizontal"
            android:text="@string/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_view_vehicle_notes"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
